--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ anyhow = "1.0.72"
 colored = "2.0.4"
 dotenv = "0.15.0"
 google-sheets4 = "5.0.3"
-reqwest = { version = "0.11.18", features = ["json"]}
+reqwest = { version = "0.12.5", features = ["json", "cookies"] }
 serde = { version = "1.0.181", features = ["derive"]}
 tokio = { version = "1.29.1", features = ["full"]}
 async-trait = "0.1.72"
